--- a/CódigoFuente/BitacorasProduccion/Views/BudgetControlling/Reportes.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/BudgetControlling/Reportes.cshtml
@@ -114,27 +114,37 @@
                                                 <div class="col-md-2 col-sm-2 ">
                                                     @Html.DropDownList("planta", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
                                                 </div>
-                                                <label class="control-label col-md-1 col-sm-1" for="planta" style="text-align:right">Responsable:</label>
-                                                <div class="col-md-3 col-sm-3 ">
-                                                    @Html.DropDownList("responsable", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                <label class="control-label col-md-1 col-sm-1" style="text-align:right">Año Fiscal:</label>
+                                                <div class="col-md-2">
+                                                    @Html.DropDownList("id_fiscal_year", null, htmlAttributes: new { @class = "select2bs4 col-md-12", @style = "width:100%", @required = "required" })
+                                                    <span class="field-validation-valid text-danger" data-valmsg-for="id_fiscal_year" data-valmsg-replace="true"></span>
                                                 </div>
                                                 <label class="control-label col-md-1 col-sm-1" for="centro_costo" style="text-align:right">Centro de Costo:</label>
                                                 <div class="col-md-1 col-sm-1">
                                                     <input type="text" class="form-control" name="centro_costo" id="centro_costo" value="@centro_costo" autocomplete="off">
                                                 </div>
-                                                <label class="control-label col-md-1 col-sm-1"  style="text-align:right">Fuente:</label>
+                                                <label class="control-label col-md-1 col-sm-1" style="text-align:right">Fuente:</label>
                                                 <div class="col-md-1 col-sm-1">
                                                     <input type="radio" id="forecast" name="tipo_reporte" value="forecast" checked>
                                                     <label for="forecast" data-toggle="tooltip" data-placement="top" title="Usuario">Forecast</label><br>
                                                     <input type="radio" id="budget" name="tipo_reporte" value="budget">
                                                     <label for="budget" data-toggle="tooltip" data-placement="bottom" title="Historico">Budget</label><br>
                                                 </div>
+
+                                            </div>
+
+                                            <div class="form-group row">
+
+                                                <label class="control-label col-md-1 col-sm-1" for="planta" style="text-align:right">Responsable:</label>
+                                                <div class="col-md-3 col-sm-3 ">
+                                                    @Html.DropDownList("responsable", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%" })
+                                                </div>
                                             </div>
 
                                             <div class="form-group row ">
 
                                                 <div class="col-md-12 col-sm-12">
-                                                    <input type="button" id="button_submit" value="Exportar" class="btn btn-success float-right" />
+                                                    <input type="submit" id="button_submit" value="Exportar" class="btn btn-success float-right" />
                                                 </div>
                                             </div>
 
@@ -158,9 +168,8 @@
 {
     <!-- SweetAlert2 -->
     @Scripts.Render(Url.Content("~/Content/vendors/sweetalert2/sweetalert2.min.js"))
-    @Scripts.Render(Url.Content("~/Scripts/AlertasSweetAlert.js"))
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
-    @Scripts.Render("~/bundles/dataTables_js")
+    @Scripts.Render("~/bundles/jqueryval")
 
     <script>
 
@@ -172,30 +181,30 @@
                 theme: 'bootstrap4'
             })
 
-            $('#button_submit').on('click', function () {
+            //$('#button_submit').on('click', function () {
 
 
-                //disable the submit button
-                $("#button_submit").attr("disabled", true);
+            //    //disable the submit button
+            //    $("#button_submit").attr("disabled", true);
 
-                setTimeout(activaSubmit, 4000);
+            //    setTimeout(activaSubmit, 4000);
 
-                $('#buscarForm').submit();
+            //    $('#buscarForm').submit();
 
-            });
+            //});
 
 
         });
 
-        function activaSubmit() {
-            //disable the submit button
-            $("#button_submit").attr("disabled", false);
+        //function activaSubmit() {
+        //    //disable the submit button
+        //    $("#button_submit").attr("disabled", false);
 
-        }
+        //}
 
-        function ReiniciaTablas() {
-            clicMenu(2);
-        }
+        //function ReiniciaTablas() {
+        //    clicMenu(2);
+        //}
 
         //agranda el tamaño de la barra
         window.onload = function () {
