--- a/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/EditCentroPresenteHT.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ResponsableBudget/EditCentroPresenteHT.cshtml
@@ -28,21 +28,22 @@
         responsables = responsables.Substring(0, 90) + "...";
     }
 
+    bool controlling = ViewBag.controlling != null? (bool)ViewBag.controlling:false;
+    bool import = ViewBag.import != null? (bool)ViewBag.import:false;
+
     //determina si los meses son actual o no
-    bool isActualOctubre = rel_presente.budget_anio_fiscal.isActual(10) == "ACT";
-    bool isActualNoviembre = rel_presente.budget_anio_fiscal.isActual(11) == "ACT";
-    bool isActualDiciembre = rel_presente.budget_anio_fiscal.isActual(12) == "ACT";
-    bool isActualEnero = rel_presente.budget_anio_fiscal.isActual(1) == "ACT";
-    bool isActualFebrero = rel_presente.budget_anio_fiscal.isActual(2) == "ACT";
-    bool isActualMarzo = rel_presente.budget_anio_fiscal.isActual(3) == "ACT";
-    bool isActualAbril = rel_presente.budget_anio_fiscal.isActual(4) == "ACT";
-    bool isActualMayo = rel_presente.budget_anio_fiscal.isActual(5) == "ACT";
-    bool isActualJunio = rel_presente.budget_anio_fiscal.isActual(6) == "ACT";
-    bool isActualJulio = rel_presente.budget_anio_fiscal.isActual(7) == "ACT";
-    bool isActualAgosto = rel_presente.budget_anio_fiscal.isActual(8) == "ACT";
-    bool isActualSeptiembre = rel_presente.budget_anio_fiscal.isActual(9) == "ACT";
-
-
+    bool isActualOctubre =  controlling ? false : rel_presente.budget_anio_fiscal.isActual(10) == "ACT";
+    bool isActualNoviembre = controlling ? false : rel_presente.budget_anio_fiscal.isActual(11) == "ACT";
+    bool isActualDiciembre = controlling ? false : rel_presente.budget_anio_fiscal.isActual(12) == "ACT";
+    bool isActualEnero = controlling ? false : rel_presente.budget_anio_fiscal.isActual(1) == "ACT";
+    bool isActualFebrero = controlling ? false : rel_presente.budget_anio_fiscal.isActual(2) == "ACT";
+    bool isActualMarzo = controlling ? false : rel_presente.budget_anio_fiscal.isActual(3) == "ACT";
+    bool isActualAbril = controlling ? false : rel_presente.budget_anio_fiscal.isActual(4) == "ACT";
+    bool isActualMayo = controlling ? false : rel_presente.budget_anio_fiscal.isActual(5) == "ACT";
+    bool isActualJunio = controlling ? false : rel_presente.budget_anio_fiscal.isActual(6) == "ACT";
+    bool isActualJulio = controlling ? false : rel_presente.budget_anio_fiscal.isActual(7) == "ACT";
+    bool isActualAgosto = controlling ? false : rel_presente.budget_anio_fiscal.isActual(8) == "ACT";
+    bool isActualSeptiembre = controlling ? false : rel_presente.budget_anio_fiscal.isActual(9) == "ACT";
 
 }
 
@@ -238,7 +239,8 @@
                             <div class="form-group row">
                                 <h4 style="color:#7c7c7c"><b>Tipo de Cambio FC FY @rel_presente.budget_anio_fiscal.descripcion</b></h4>
                             </div>
-                        </div>
+                        </div>                     
+
                         <div class="col-sm-12" id="ht-tipo-cambio">
 
                         </div>
@@ -2855,8 +2857,8 @@
 
                            exito = true;
 
-                           if (salir && result == "OK") {
-                               window.location.href = "../Centros/";
+                           if (salir && result == "OK") {                              
+                                   window.location.href = "../Centros/";                              
                            }
 
                        } catch (error) {
