--- a/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/Shared/_Layout.cshtml
@@ -26,8 +26,8 @@
     <!-- Custom Theme Style -->
     <link href="@Url.Content("~/Content/build/css/custom.css")" rel="stylesheet">
 
-    @if (@HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains(":9030")
-      || @HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains(":9040")
+    @if (@HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains("desarrollo-portaltkmm")
+      || @HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains("calidad-portaltkmm")
       )
     {
         <!-- Toastr -->
@@ -110,8 +110,8 @@
         }
     </style>
 
-    @if (@HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains(":9030")
-     || @HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains(":9040")
+    @if (@HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains("desarrollo-portaltkmm")
+     || @HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains("calidad-portaltkmm")
      )
     {
         <style>
@@ -881,7 +881,7 @@
 
             for (i = 0; i < menus.length; i++) {
                 menus[i].style.display = 'none'
-            }          
+            }
         </script>
     }
 
@@ -918,34 +918,35 @@
     @Scripts.Render(Url.Content("~/Scripts/site.js"))
 
 
-    @if (@HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains(":9040"))
+    @if (@HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains("desarrollo-portaltkmm")
+    || @HttpContext.Current.Request.Url.GetLeftPart(UriPartial.Authority).Contains("calidad-portaltkmm"))
     {
-        <!-- toastr -->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <!-- toastr -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
 
-        <script>
-            $(document).ready(function () {
+    <script>
+        $(document).ready(function () {
 
-                toastr.options = {
-                    "closeButton": true,
-                    "debug": false,
-                    "positionClass": "toast-bottom-right",
-                    "onclick": null,
-                    "fadeIn": 300,
-                    "fadeOut": 1000,
-                    "timeOut": 1200000,
-                    "extendedTimeOut": 1200000
-                }
-                toastr.options.tapToDismiss = false
+            toastr.options = {
+                "closeButton": true,
+                "debug": false,
+                "positionClass": "toast-bottom-right",
+                "onclick": null,
+                "fadeIn": 300,
+                "fadeOut": 1000,
+                "timeOut": 1200000,
+                "extendedTimeOut": 1200000
+            }
+            toastr.options.tapToDismiss = false
 
-                toastr.info("Este Portal es de Calidad y su único fin es probar la funcionalidad del mismo. Una vez aprobado se liberará en Productivo.", "¡Aviso!").css(({
-                    width: "500px",
-                    "max-width": "500px"
-                }))
+            toastr.info("Este Portal es de Calidad y su único fin es probar la funcionalidad del mismo. Una vez aprobado se liberará en Productivo.", "¡Aviso!").css(({
+                width: "500px",
+                "max-width": "500px"
+            }))
 
-            });
+        });
 
-        </script>
+    </script>
     }
 
 
