--- a/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/Index.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ProduccionRegistros/Index.cshtml
@@ -24,7 +24,7 @@
         filtroLinea = paginacionFiltros.ValoresQueryString["linea"].ToString();
     }
 
-    List<int> idLineas =  (List<int>)ViewBag.Lineas;
+    List<int> idLineas = (List<int>)ViewBag.Lineas;
 
 }
 
@@ -109,6 +109,10 @@
                                                 <label class="control-label col-md-2 col-sm-2" for="linea">L&iacute;nea</label>
                                                 <div class="col-md-6 col-sm-6 ">
                                                     @Html.DropDownList("linea", null, "-- Seleccione un valor --", htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @required = "required" })
+                                                </div> 
+                                                <label class="control-label col-md-1 col-sm-1" for="linea">¿Posteado?</label>
+                                                <div class="col-md-2 col-sm-2 ">
+                                                    @Html.DropDownList("posteado", null, htmlAttributes: new { @class = "form-control select2bs4", @style = "width:100%", @required = "required" })
                                                 </div>
                                             </div>
 
@@ -120,7 +124,7 @@
                                         {
                                             <input type="hidden" name="linea" value="@filtroLinea" id="hidden_linea" />
                                             <input type="hidden" name="planta" value="@filtroPlanta" id="hidden_planta" />
-                                            if(User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REGISTRO))
+                                            if (User.IsInRole(TipoRoles.BITACORAS_PRODUCCION_REGISTRO))
                                             {
                                                 <input type="button" style="display:none" value="Crear nuevo registro" class="btn btn-success float-left" id="crearFormButton" />
                                             }
@@ -134,6 +138,9 @@
                                             <table id="datatable_1" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                                 <thead>
                                                     <tr>
+                                                        <th>
+                                                            @Html.DisplayNameFor(model => model.produccion_datos_entrada.posteado)
+                                                        </th>
                                                         <th>
                                                             @Html.DisplayNameFor(model => model.sap_platina)
                                                         </th>
@@ -173,9 +180,13 @@
 
                                                         <tr class="@(item.activo.HasValue && !item.activo.Value ? "fondo_rojo" : item.sap_platina.Contains("TEMPORAL") ? "fondo_temporal": "" )">
 
+                                                            <td style="font-weight:bold;color:@(item.produccion_datos_entrada != null && item.produccion_datos_entrada.posteado ? "green":"red")">
+                                                                @(item.produccion_datos_entrada != null && item.produccion_datos_entrada.posteado ? "SÍ":"NO")
+                                                            </td>
+
                                                             <td>
                                                                 @Html.DisplayFor(modelItem => item.sap_platina)
-                                                            </td> 
+                                                            </td>
                                                             <td>
                                                                 @Html.DisplayFor(modelItem => item.sap_platina_2)
                                                             </td>
@@ -271,7 +282,7 @@
 
     @Scripts.Render("~/bundles/dataTables_js")
 
-    @Scripts.Render(Url.Content("~/Scripts/Forms/ProduccionRegistrosIndex.js?date"+DateTime.Now))
+    @Scripts.Render(Url.Content("~/Scripts/Forms/ProduccionRegistrosIndex.js?date" + DateTime.Now))
 
 }
 
